update parameter name
